# haoframework

./: README.md
bind_function/: build.sh  demobind.cpp  myfunc.cc  readme.txt
doc/: haha.txt
reflection/: readme.md
reflection/demo1/: reflection.cpp
reflection/demo2/: PreInterface.cpp  PreInterface.h  TestClass.h  TestClassA.cpp  TestClassA.h  TestClassB.cpp  TestClassB.h  TestClassC.cpp  TestClassC.h  build.sh  clean.sh  main.cpp  main.h  readme.md  readme.txt  reflection.cpp  reflection.h  test.sh
reflection/demo3/: build.sh  clean.sh  dongtai  dongtai.c  module.c  module.h  test.c
reflection/demo4/classdemo/: build.sh  main.cpp  triangle.cpp
reflection/demo4/fun/: build.sh  main.cpp
thrift/: CMakeLists.txt  build.sh  demo.thrift  demo_client.cpp  readme.txt
thrift/gen-cpp/: UserStorage.cpp  UserStorage.h  UserStorage_server.skeleton.cpp  demo_constants.cpp  demo_constants.h  demo_server.cpp  demo_types.cpp  demo_types.h
